--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
+browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
 run.as=LOCAL
-url=http://localhost:8080/restaurante/
+url=http://localhost/restaurante/
